[workspace]
resolver = "2"

members = [
    "timecat_lib",
    "timecat_bin",
]

[workspace.package]
authors = ["Gourab Ghosh"]
version = "1.27.0"
edition = "2021"
homepage = "https://github.com/Gourab-Ghosh/timecat-rs/"
repository = "https://github.com/Gourab-Ghosh/timecat-rs/"
description = "A NNUE-based chess engine that implements the Negamax algorithm and can be integrated into any project as a library. It features move generation, advanced position evaluation through NNUE, and move searching capabilities."
documentation = "https://docs.rs/timecat"
license-file = "LICENSE"
# keywords = ["rust", "chess-engine", "chess", "uci", "alpha-beta-pruning", "negamax", "chess-ai", "uci-chess-engine", "nnue", "timecat", "timecat-rs"]
keywords = ["chess-engine", "chess", "uci", "nnue", "ai"]
# https://crates.io/category_slugs
categories = ["wasm", "algorithms", "games", "game-development"]
readme = "README.md"
include = [
    "timecat_*/",
    "!**/*.bak",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "documentation/**/*.md",
]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
lto = true
panic = "abort"
# rustflags = ["-C", "target-cpu=native"]
# strip = true