[package]
name = "timecat_lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
documentation.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0"
binread = { version = "2", features = ["const_generics"], optional = true}
colored = { version = "2", optional = true }
itertools = "0"
paste = "1"
serde = { version = "1", features = ["derive"], optional = true }
web-time = { version = "1", optional = true }
gloo = { version = "0", optional = true }

[build-dependencies]
reqwest = { version = "0", features = ["blocking"], optional = true }
sha256 = { version = "1", optional = true }
dirs = { version = "5", optional = true }

[features]
# default = ["debug"]
binary = ["inbuilt_nnue", "engine"]
nnue_reader = ["dep:binread"]
inbuilt_nnue = ["dep:reqwest", "dep:sha256", "dep:dirs", "nnue_reader"]
engine = ["inbuilt_nnue"]
colored = ["dep:colored"]
speed = []
serde = ["dep:serde", "web-time?/serde"]
wasm = ["dep:web-time", "dep:gloo"]
experimental = []
debug = ["binary", "experimental", "colored", "speed"]

[lib]
name = "timecat_lib"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
